--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-profile-image-box-example",
-  "homepage": "https://bitbucket.org/pritomkucse/react-profile-image-box",
+  "homepage": "https://github.com/pritomkucse/react-profile-image-box",
   "version": "1.0.2",
   "license": "MIT",
   "main": "index.js",
